update books issue #X3

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -15,7 +15,14 @@
 <!-- Contenido -->
 <section>
     <b>Libros</b>
-    <p>(Contenido)</p>
+    <p>Los libros son una fuente inagotable de conocimiento y entretenimiento. Desde novelas clásicas hasta ensayos modernos, la literatura ha acompañado a la humanidad a lo largo de la historia. Algunos títulos recomendados incluyen:</p>
+    <ul>
+        <li><i>Cien años de soledad</i> - Gabriel García Márquez</li>
+        <li><i>1984</i> - George Orwell</li>
+        <li><i>El señor de los anillos</i> - J.R.R. Tolkien</li>
+        <li><i>Don Quijote de la Mancha</i> - Miguel de Cervantes</li>
+        <li><i>Orgullo y prejuicio</i> - Jane Austen</li>
+    </ul>
 </section>
 <section>
     <b>Películas</b>
