update movies & books issue #X4

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -15,15 +15,24 @@
 <!-- Contenido -->
 <section>
     <b>Libros</b>
-    <p>(Contenido)</p>
+    <p>Los libros son una fuente inagotable de conocimiento y entretenimiento. Desde novelas clásicas hasta ensayos modernos, la literatura ha acompañado a la humanidad a lo largo de la historia. Algunos títulos recomendados incluyen:</p>
+    <ul>
+        <li><i>Cien años de fiesta</i> - Gabriel Marquez</li>
+        <li><i>1948</i> - Orwell George </li>
+        <li><i>El señor de los circulos relucientes</i> - R.R.J. Tolkien</li>
+    </ul>
 </section>
 <section>
     <b>Películas</b>
-    <p>(Contenido)</p>
+    <p>Mejores peliculas del Mundo!</p>
+    <ul>
+        <li><i>Dune</i> - Villavieja</li>
+    </ul>
+
 </section>
 <!-- Pie de pagina -->
 <footer>
-    (c) Aspectos Juridicos
+    (c) Evolución y Mantenimiento Software
 </footer>
 </body>
 </html>
