--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -22,11 +22,18 @@
         <li><i>El señor de los anillos</i> - J.R.R. Tolkien</li>
         <li><i>Don Quijote de la Mancha</i> - Miguel de Cervantes</li>
         <li><i>Orgullo y prejuicio</i> - Jane Austen</li>
+        <li><i>Cien años de fiesta</i> - Gabriel Marquez</li>
+        <li><i>1948</i> - Orwell George </li>
+        <li><i>El señor de los circulos relucientes</i> - R.R.J. Tolkien</li>
     </ul>
 </section>
 <section>
     <b>Películas</b>
-    <p>(Contenido)</p>
+    <p>Mejores peliculas del Mundo!</p>
+    <ul>
+        <li><i>Dune</i> - Villavieja</li>
+    </ul>
+
 </section>
 <!-- Pie de pagina -->
 <footer>
